tests/failing/1-too_many_args/main.rgo
int: @int
exit: @exit

foo: (x: int, y: int) {
    exit(0)
}
main: () {
    foo(1, 2, 3)
}
